objects/Plate_Queue_Batch__c.object
<CustomObject>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Records__c</fullName>
        <description>Number of records created for the Batch.</description>
        <label>Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Plate__c</fullName>
        <label>Start Plate</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Plate Queue Batch</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Batch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plate Queue Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>